--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "embla-carousel-react": "^7.1.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "framer-motion": "^10.12.7",
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-intersection-observer": "^9.4.3",
     "typescript": "5.0.4",
     "typewriter-effect": "^2.19.0"
   },
